KSENROLL-12595: fixed minor alignment issue in sticky header
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@70419 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
@@ -77,6 +77,7 @@
     display: block;
     float: none;
     width: auto;
+    text-align: left !important;
 
     .util-sticky--stuck & {
         display: block;
